--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -44,7 +44,7 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -75,7 +75,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -89,7 +89,7 @@ body {
   overflow-x: hidden;
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -97,18 +97,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: light) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
-}
+} */
 
 /* Custom styles */
 .card {
@@ -116,11 +116,20 @@ a {
 }
 
 .primary-button {
-  @apply rounded bg-cyan-300 py-2 px-4 shadow outline-none hover:bg-cyan-400  active:bg-cyan-500;
+  @apply rounded bg-cyan-400 py-2 px-4 shadow outline-none hover:bg-cyan-500  active:bg-cyan-600;
 }
 
 input,
 select,
 textarea {
-  @apply rounded border p-2  outline-none ring-cyan-500  focus:ring;
+  @apply rounded border p-2  outline-none ring-cyan-600  focus:ring;
+}
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-cyan-500 rounded;
+}
+
+nav,
+footer {
+  @apply bg-slate-800 text-slate-100;
 }
