--- a/styles/globals.css
+++ b/styles/globals.css
@@ -119,6 +119,10 @@ body {
   @apply rounded bg-cyan-400 py-2 px-4 shadow outline-none hover:bg-cyan-500  active:bg-cyan-600;
 }
 
+.default-button {
+  @apply rounded bg-gray-100 py-2 px-4 shadow outline-none text-black hover:bg-gray-200  active:bg-gray-300;
+}
+
 input,
 select,
 textarea {
