--- a/styles/globals.css
+++ b/styles/globals.css
@@ -133,6 +133,14 @@ textarea {
   @apply flex p-2 hover:bg-cyan-500 rounded;
 }
 
+.alert-error {
+  @apply my-3 rounded-lg bg-red-100 p-3 text-red-700;
+}
+
+.alert-success {
+  @apply my-3 rounded-lg bg-green-100 p-3 text-green-700;
+}
+
 nav,
 footer {
   @apply bg-slate-800 text-slate-100;
