--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,3 +50,17 @@ footer {
 .alert-success {
   @apply my-3 rounded-lg bg-green-100 p-3 text-green-700;
 }
+
+.h4 {
+  @apply text-2xl font-bold;
+}
+
+.carousel-image {
+  min-height: 400px;
+}
+
+@media only screen and (max-width: 768px) {
+  .carousel-image {
+    min-height: 50vh;
+  }
+}
